# IOT_Enviromental_Sensor

./: CMakeLists.txt  LICENSE  README.md  main.c
components/bme280/: idf_component.yml
main/: CMakeLists.txt  borrar.txt  hello_world_main.c  idf_component.yml  main.c  token.txt
main/i2c_components/include/: i2c_components.h
main/i2c_components/src/: i2c_components.c
main/mqtt_service/include/: mqtt_service.h
main/mqtt_service/src/: mqtt_service.c
main/wifi_prov/: web_server.html
main/wifi_prov/iclude/: wifi_prov.h
main/wifi_prov/src/: wifi_prov.c
